Version 1.01: Fixed horizontal overflow

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body{
 
 body{
     font-family: 'Hind Siliguri', sans-serif;
+    overflow-x: hidden;
 }
 .semiBold{
   font-weight: 600;
